[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "mlaas"
version = "0.0.1"
authors = [
  { name="thuvis", email="wangzw834@163.com" },
]
description = "visualization package for machine learning"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thu-vis/mlaas"
"Bug Tracker" = "https://github.com/thu-vis/mlaas/issues"